--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,12 @@ django = "^5.0"
 djangorestframework = "^3.14.0"
 drf-spectacular = "^0.27.0"
 pillow = "^10.1.0"
+pre-commit = "^3.6.0"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.4.3"
+black = "^23.12.1"
 
 [build-system]
 requires = ["poetry-core"]
