--- a/.github/workflows/pylearn_ci.yml
+++ b/.github/workflows/pylearn_ci.yml
@@ -23,7 +23,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Poetry
       run: |
-        pip install poetry==1.1.13
+        pip install poetry==poetry==1.4.2
     - name: Install Dependencies
       run: |
         poetry install
