--- a/.github/workflows/pylearn_ci.yml
+++ b/.github/workflows/pylearn_ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.11]
 
     steps:
     - uses: actions/checkout@v3
@@ -23,7 +23,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Poetry
       run: |
-        pip install poetry==poetry==1.4.2
+        pip install poetry==poetry==1.7.1
     - name: Install Dependencies
       run: |
         poetry install
